@@ -40,10 +40,7 @@ sub _text_layers {
 	my ($encoding, $crlf) = @_;
 	$crlf = CRLF_DEFAULT if $crlf && $crlf eq 'auto';
 
-	if ($encoding =~ /^(latin-?|iso-8859-)1$/i) {
-		return $crlf ? ':unix:crlf' : ':raw';
-	}
-	elsif (HAS_UTF8_STRICT && $encoding =~ /^utf-?8\b/i) {
+	if (HAS_UTF8_STRICT && $encoding =~ /^utf-?8\b/i) {
 		return $crlf ? ':unix:utf8_strict:crlf' : ':unix:utf8_strict';
 	}
 	else {
@@ -56,7 +53,6 @@ sub read_text {
 	my ($filename, $encoding, $crlf) = @_;
 	$encoding ||= 'utf-8';
 	my $layer = _text_layers($encoding, $crlf);
-	return read_binary($filename) if $layer eq ':raw';
 
 	local $PerlIO::encoding::fallback = STOP_AT_PARTIAL | FB_CROAK;
 	open my $fh, "<$layer", $filename or croak "Couldn't open $filename: $!";
@@ -76,7 +72,11 @@ sub write_text {
 }
 
 sub write_binary {
-	return write_text(@_[0,1], 'latin-1');
+	my $filename = $_[0];
+	open my $fh, ">:raw", $filename or croak "Couldn't open $filename: $!";
+	print $fh $_[1] or croak "Couldn't write to $filename: $!";
+	close $fh or croak "Couldn't write to $filename: $!";
+	return;
 }
 
 sub read_lines {
